@@ -16,6 +16,7 @@
   <script type="application/x-javascript" src="chrome://gamefox/content/sig.js"/>
   <script type="application/x-javascript" src="chrome://gamefox/content/accounts.js"/>
   <script type="application/x-javascript" src="chrome://gamefox/content/userlist.js"/>
+  <script type="application/x-javascript" src="chrome://gamefox/content/messages.js"/>
 
   <!-- common context menu -->
   <popup id="contentAreaContextMenu">
