@@ -10,6 +10,7 @@
     * Fix user highlighting and numbering in archived topics
     * Unlimited user highlighting groups
     * "Go to last post" double click action
+    * Title and message character counts
 
 2008-08-15:
     * version 0.6.4
